Fix logo size on Firefox, closes #558

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -53,6 +53,11 @@ img
     display block
     max-width 100%
 
+    .logos &
+        // Fixes logo size on Firefox, see:
+        // https://github.com/nodejs/nodejs.org/issues/558
+        width: 100%
+
 
 code
     background-color $light-gray3
